# MiscLib

./: CMakeLists.txt  README.md  run.bat
Linux/: CMakeLists.txt
src/: Misc.cpp
