cmake_minimum_required(VERSION 3.21)
add_definitions(-std=c++20)
project(Misc)
file(GLOB SOURCES "include/*.cpp")
include_directories("/home/terrance/SFML/SFML-2.6.2/include")
link_directories("/home/terrance/SFML/SFML-2.6.2/lib")
set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)
add_library(${PROJECT_NAME} STATIC ${SOURCES})
target_link_libraries(${PROJECT_NAME} sfml-graphics sfml-window sfml-audio sfml-network sfml-system)
